--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="app_name">AndroidTutorial</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    
+    <string name="hint_bind_et_example">Enter a text</string>
 
 </resources>
