--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="title_activity_second">SecondActivity</string>
     <string name="button_send">Send</string>
     <string name="hint_enter_message">Enter a message</string>
-    <string name="button_finish">Finish</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_response">Response</string>
+    <string name="toast_result_canceled">Activity canceled</string>
 
 </resources>
